# tree-sitter-tonel-smalltalk

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  MANIFEST.in  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.claude/: settings.local.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-tonel-smalltalk.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tonel_smalltalk/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterTonelSmalltalk/: tonel-smalltalk.h
bindings/swift/TreeSitterTonelSmalltalkTests/: TreeSitterTonelSmalltalkTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: class_definitions.txt  method_definitions.txt  smalltalk_expressions.txt
test/highlight/: highlights.st
