[package]
name = "tree-sitter-tonel-smalltalk"
description = "tonel-smalltalk grammar for the tree-sitter parsing library"
version = "0.2.1"
keywords = ["incremental", "parsing", "tonel-smalltalk"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-tonel-smalltalk"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.26.8"

[build-dependencies]
cc = "1.0"
